# baserowdantic

./: .gitignore  .pdoc.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml
example/: model.py  orm.py  persons.json
misc/: companies.csv  logo.afpub  old_orm_readme.md  toc-indicator.afpub
src/baserow/: __init__.py  client.py  color.py  error.py  field.py  field_config.py  filter.py  result.py  table.py
