# [build-system]
# requires = ["flit_core >=3.4,<4"]
# build-backend = "flit_core.buildapi"

[project]
name = "baserowdantic"
dynamic = ["version"]
authors = [
    {name = "72nd", email = "msg@frg72.com"}
]
description = "Pydantic-based Baserow CRUD Client featuring ORM-like capabilities"
readme = "README.md"
keywords = ["baserow", "pydantic", "no-code", "orm", "database"]
dependencies = [
    "aiohttp",
    "pydantic",
    "typing_extensions"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# Optional dependency to build the documentation.
doc = [
    "pdoc"
]

[tool.setuptools.packages.find]
where = ["src/"]